cleaning up a bunch of unused imports and code